# re_study_av

./: settings.gradle
app/: build.gradle
app/docs/: pthread_cond_signal竟然可以放在lock之外.txt  环境搭建.txt  线程回调方法不能是成员方法.txt
app/src/androidTest/java/com/miduo/restudyav/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/miduo/restudyav/: ICallBackInterface.aidl  IPlayInterface.aidl
app/src/main/java/com/miduo/restudyav/: MainActivity.java  PlayerService.java  ReleaseMainActivity.java  Utils.java
app/src/main/java/com/miduo/restudyav/Widget/: DbLineView.java  PointF.java
app/src/main/res/drawable/: circle.xml  oval.xml
app/src/main/res/layout/: activity_main.xml  activity_main_release.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/miduo/restudyav/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/com/miduo/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: HAudio.cpp  HAudio.h  HFFmpeg.cpp  HFFmpeg.h  HOpenslEs.cpp  HOpenslEs.h  HPlayStatus.cpp  HPlayStatus.h  HQueue.cpp  HQueue.h  native-lib-demo.cpp  native-lib.cpp
player/src/main/cpp/common/: CallBackJava.cpp  CallBackJava.h
player/src/main/cpp/head/: log.h
player/src/main/cpp/include/: test.h
player/src/main/java/com/miduo/player/: MediaCodecRecord.java  Player.java
player/src/main/java/com/miduo/player/listener/: DbCallBackListener.java
player/src/test/java/com/miduo/player/: ExampleUnitTest.java
